kubernetes/core/harbor/harbor/app/virtualservice.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.istio.io/virtualservice_v1.json
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: harbor-ingress
  namespace: harbor
spec:
  hosts:
    - harbor.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /api/
      route:
        - destination:
            host: harbor-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /service/
      route:
        - destination:
            host: harbor-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /v2/
      route:
        - destination:
            host: harbor-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /c/
      route:
        - destination:
            host: harbor-core.harbor.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: harbor-portal.harbor.svc.cluster.local
            port:
              number: 80
